--- a/views/film-details.phtml
+++ b/views/film-details.phtml
@@ -1,2 +1,2 @@
 <?php /* @var $film \Application\Entity\Film */ ?>
-<h1>Film details : <?= $film->name() ?></h1>
+<h1>Meetings details : <?= $film->name() ?></h1>
