Meeting by user w/ community

--- a/views/meeting-details.phtml
+++ b/views/meeting-details.phtml
@@ -2,7 +2,7 @@
 <h1>Meeting Detail</h1>
 
 <ul>
-        <li>Titre : <?= $meeting->titre() ?></li>
+        <li>Titre : <?= $meetings->titre() ?></li>
         <li>Description : <?= $meeting->description() ?></li>
         <li>Debut : <?= $meeting->endDate() ?></li>
         <li>Fin : <?= $meeting->startDate() ?></li>
