--- a/views/user-meetings.phtml
+++ b/views/user-meetings.phtml
@@ -1,9 +1,9 @@
 <?php /* @var $users \Application\Collection\MeetingCollection */ ?>
-    <h1>User : <?= $meetings[0]->name() ?></h1>
+    <h1>User : <?= $data[0]->name() ?></h1>
 
     <h2>Meetings</h2>
 
-    <?php foreach ($meetings[1] as $meeting) : /* @var $meetings \Application\Entity\Meeting */ ?>
+    <?php foreach ($data[1] as $meeting) : /* @var $meetings \Application\Entity\Meeting */ ?>
         <ul>
             <li>Community : <?= $meeting[1]->getName() ?></li>
             <li>Titre : <?= $meeting[0]->titre() ?></li>
