--- a/views/communities.phtml
+++ b/views/communities.phtml
@@ -1,5 +1,5 @@
 <?php /* @var $users \Application\Collection\MeetingCollection */ ?>
-<h1>User</h1>
+<h1>Community</h1>
 
 <ul>
     <?php foreach ($communities as $community) : /* @var $users \Application\Entity\Meeting */ ?>
